fix issue #13 - contact form button alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,6 +55,7 @@ body {
 }
 
 #contact .btn {
+  position: absolute;
   bottom: 1rem;
 }
 
