--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -48,6 +48,12 @@ body{
     bottom: 1rem;
   }
 }
+#contact{
+  .btn {
+    position: absolute;
+    bottom: 1rem;
+  }
+}
 
 .card-img{
   width: 100%;
